--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             My research interests lie in model-based reinforcement learning, offline meta reinforcement learning and embodied intelligent w.r.t robotic manipulation🤖.
             <br>
             I'm lucky to work with <a href="https://lanqingli1993.github.io/">Prof. Lanqing Li</a> and <a href="https://www.cse.cuhk.edu.hk/~pheng/">Prof. Pheng Ann Heng</a> at the Chinese University of HongKong previously.
-            Now I'm work closely with <a href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a> at the Institute for Interdisciplinary Information Science at Tsinghua University to explore the generalization ability towards robotic manipulation.
+            Now I'm working closely with <a href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a> at the Institute for Interdisciplinary Information Science at Tsinghua University to explore the generalization ability towards robotic manipulation.
             <br>
             I'm open to collaborations on reinforcement learning / robotics related projects! Feel free to drop me👋. I'm pursuing PhD position in 25 Fall.
             <br> <br>
