--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
         <div id="intro-text">
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
-            Hi there! I'm currently a second-year graduate student at TIEV lab, Tongji University, supervised by <a href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
-            Before this, I got my bachelor degree at <a href="https://see.tongji.edu.cn/">Tongji University</a>, major in computer science and technology.
+            Hi there! I'm currently a second-year graduate student at <a href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
+            Before this, I got my bachelor degree at <a href="https://see.tongji.edu.cn/">Tongji University</a>, major in computer science and technology 
+            and had an exciting experience in <a href="https://www.nio.cn/">NIO</a> served for backend-development engineer.
             <br>
             My research interests lie in model-based reinforcement learning, offline meta reinforcement learning and embodied intelligent w.r.t robotic manipulation🤖.
             <br>
             I'm lucky to work with <a href="https://lanqingli1993.github.io/">Prof. Lanqing Li</a> and <a href="https://www.cse.cuhk.edu.hk/~pheng/">Prof. Pheng Ann Heng</a> at the Chinese University of HongKong previously.
             Now I'm working closely with <a href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a> at the Institute for Interdisciplinary Information Science at Tsinghua University to explore the generalization ability towards robotic manipulation.
             <br>
-            I'm open to collaborations on reinforcement learning / robotics related projects! Feel free to drop me👋. I'm pursuing PhD position in 25 Fall.
+            I'm open to collaborations on reinforcement learning / robotics related projects! Feel free to drop me👋. 
+            <br>
+            [Recent News] I'm pursuing PhD position in 25 Fall.
             <br> <br>
 
             <a href="https://github.com/betray12138" style="color: #000000;"><i style="font-size:20px" class="fa">&#xf09b;</i> Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -170,7 +173,7 @@
         <!-- side projects  -->
         <div class="list-item project description" data-category="project">
           <h3>
-            Some of the competition and projects.
+            Some of the competitions and projects.
           </h3>
         </div>
 
