--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
           color: red;
           font-size: 20px;
       }
+
+      .wechatModal.visible {
+          display: block; /* Show the modal when visible class is added */
+      }
+
   </style>
   </head>
 
