--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   <div class="wechatModal">
                     <div class="modal-content">
                         <span class="closeModal" style="cursor: pointer; float: left; font-size: 20px;">&times;</span>
-                        <iframe class="pdfContainer" src="files/USB_PO_Poster.pdf" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
+                        <iframe class="pdfContainer" src="files/USB_PO_Poster.pdf#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
                         <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                     </div>
                   </div>
@@ -190,7 +190,7 @@
                   <div class="wechatModal">
                     <div class="modal-content">
                         <span class="closeModal" style="cursor: pointer; float: left; font-size: 20px;">&times;
-                          <iframe class="pdfContainer" src="files/saferl_icra_poster.pdf" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
+                          <iframe class="pdfContainer" src="files/saferl_icra_poster.pdf#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
                           <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                         </span>
                     </div>
@@ -260,7 +260,7 @@
         </div>
 
         <div class="list-item cv description" data-category="cv">
-          <iframe class="pdfContainer" src="files/cv.pdf" type="application/pdf" width="900" height="1170" style="border:none;"></iframe>
+          <iframe class="pdfContainer" src="files/cv.pdf#toolbar=0" type="application/pdf" width="900" height="1170" style="border:none;"></iframe>
           <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
         </div>
 
