--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 
       </div>
 
+      
+
       <div id="filters" class="button-group">
         <button class="button" id="researchButton" data-filter=".publication"><span class="english-text">Research</span></button>
         <button class="button" data-filter=".project"><span class="english-text">Projects</span></button>
@@ -266,6 +268,17 @@
 
 
       </div>
+
+      <div>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="blocknerf_stop()" onmouseover="blocknerf_start()">
+            <td style="padding:20px;width:40%;max-width:40%;vertical-align:middle">          
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24&cl=ffffff&w=a"></script>
+            </td>
+          </tr>
+        </tbody></table>
+      </div>
+
 
       <div id="footer">Website template adapted from <a href="https://github.com/andyzeng/andyzeng.github.io">Andy Zeng</a> and <a href="https://jonbarron.info/">Jon Barron</a>.</div>
 
