--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="project-description">
             <h3><a target="_blank" href="">Focus On What Matters: Separated Models For Visual-Based RL Generalization</a></h3>
             <p>
-              Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Hongtu Zhou, Chang Huang, Hang Yu, Chen Ye, Junqiao Zhao, changjun jiang<br>
+              Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Hongtu Zhou, Chang Huang, Hang Yu, Chen Ye, Junqiao Zhao, Changjun Jiang<br>
               <i>Under review </i><br>
               <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                 TL;DR: We propose SMG, which utilizes a reconstruction-based auxiliary task to extract task-relevant representations from visual observations 
