--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="blocknerf_stop()" onmouseover="blocknerf_start()">
             <td style="padding:10px;width:40%;max-width:40%;vertical-align:middle">          
-              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24&cl=ffffff&w=a"></script>
+              <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24"></script>
             </td>
           </tr>
         </tbody></table>
