--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div id="intro-text">
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
-            Hi there! I'm currently a second-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
+            Hi there!  
+            I'm currently a third-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
             Before this, I got my bachelor degree at <a target="_blank" href="https://see.tongji.edu.cn/">Tongji University</a>, major in computer science and technology 
             and had an exciting experience in <a target="_blank" href="https://www.nio.cn/">NIO</a> served for backend-development engineer.
             <br>
@@ -78,9 +79,9 @@
             Now I'm working closely with <a target="_blank" href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a> at the Institute for Interdisciplinary Information Science at Tsinghua University to explore the generalization ability towards robotic manipulation.
             <br>
             I'm open to collaborations on reinforcement learning / robotics related projects! Feel free to drop me👋. 
-            <br>
+            <br><br>
             [Recent News] I'm pursuing PhD position in 25 Fall.
-            <br> <br>
+            <br>
 
             <a target="_blank" href="https://github.com/betray12138" style="color: #000000;"><i style="font-size:20px" class="fa">&#xf09b;</i> Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="https://www.zhihu.com/people/betray12138" style="color: #4185F4; font-size:17px"> <img src="images/icon_zhihu.png" alt="", width="3%" /> Zhi Hu</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -114,9 +115,8 @@
                 <br><i>Under Review</i><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
-                  We unify the mutual information objective commonly used in COMRL with the general RL objective, filling the gap between intuition and theoretical justification. 
-                  We theoretically demonstrate that by reining the previously ignored task representation shift, it is possible to achieve monotonic performance improvements.
-                  We firstly propose classifier-based method into COMRL, achieving SOTA performance in asymptotic performance, training stability and training time cost as well as tuning-free property.
+                  We unify the training scheme commonly used in COMRL with the general RL objective, filling the gap between intuition and theoretical justification. 
+                  We identify the new issue called task representation shift and theoretically demonstrate that by reining in the previously ignored task representation shift, it is possible to achieve monotonic performance improvements.
                   <br> <a target="_blank" href="https://arxiv.org/abs/2405.12001">arXiv</a> 
             </p>
           </div>
@@ -127,12 +127,12 @@
           <div class="project-description">
             <h3><a target="_blank" href="https://arxiv.org/abs/2402.02429">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
             <p>
-                Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng<br>
-                <br><i>Under Review</i><br>
-                <!-- <font color="49bf9"><i>&#9733; Oral &#9733;</i></font><br> -->
+                Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng
+                <br><i>NeurIPS 2024</i><br>
+                <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8) &#9733;</i></font><br>
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                   TL;DR: We propose a novel information theoretic framework of the context-based offline meta-RL paradigm, 
-                  which unifies several mainstream methods and leads to a general and state-of-the-art algorithm called UNICORN,
+                  which unifies the mainstream COMRL methods, then leads to a general and state-of-the-art algorithm called UNICORN,
                   exhibiting remarkable generalization across a broad spectrum of RL benchmarks, context shift scenarios, data qualities and deep learning architectures. </font><br>
                 <a target="_blank" href="https://arxiv.org/abs/2402.02429">arXiv</a>
             </p>
@@ -145,7 +145,7 @@
             <h3><a target="_blank" href="">Focus On What Matters: Separated Models For Visual-Based RL Generalization</a></h3>
             <p>
               Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Hongtu Zhou, Chang Huang, Hang Yu, Chen Ye, Junqiao Zhao, Changjun Jiang<br>
-              <i>Under review </i><br>
+              <i>NeurIPS 2024</i><br>
               <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                 TL;DR: We propose SMG, which utilizes a reconstruction-based auxiliary task to extract task-relevant representations from visual observations 
                 and further strengths the generalization ability of RL agents with the help of two consistency losses.
@@ -280,7 +280,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="blocknerf_stop()" onmouseover="blocknerf_start()">
             <td style="padding:10px;width:40%;max-width:40%;vertical-align:middle">          
-              <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24"></script>
+              <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24'></script>
             </td>
           </tr>
         </tbody></table>
