--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            I'm currently a third-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
+            I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">the University of HongKong</a>, supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a>.
+            Now, I'm a third-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
             Before this, I got my bachelor degree at <a target="_blank" href="https://see.tongji.edu.cn/">Tongji University</a>, major in computer science and technology 
             and had an exciting experience in <a target="_blank" href="https://www.nio.cn/">NIO</a> served for backend-development engineer.
             <br>
@@ -80,8 +81,6 @@
             <br>
             I'm open to collaborations on reinforcement learning / robotics related projects! Feel free to drop me👋. 
             <br><br>
-            [Recent News] I'm pursuing PhD position in 25 Fall.
-            <br>
 
             <a target="_blank" href="https://github.com/betray12138" style="color: #000000;"><i style="font-size:20px" class="fa">&#xf09b;</i> Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="https://www.zhihu.com/people/betray12138" style="color: #4185F4; font-size:17px"> <img src="images/icon_zhihu.png" alt="", width="3%" /> Zhi Hu</a>&nbsp;&nbsp;&nbsp;&nbsp;
