--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <div class="list-item publication" data-category="publication">
           <a target="_blank" href="https://arxiv.org/abs/2405.12001" class="thumbnail"><img src="images/scrutinize.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="https://arxiv.org/abs/2405.12001">Scrutinize What We Ignore: Reining Task Representation Shift In Context-Based Offline Meta Reinforcement Learning</a></h3>
+            <h3><a target="_blank" href="https://arxiv.org/abs/2405.12001">Scrutinize What We Ignore: Reining In Task Representation Shift Of Context-Based Offline Meta Reinforcement Learning</a></h3>
             <p>
-                <u>Hai Zhang</u>, Boyuan Zheng, Anqi Guo, Tianying Ji, Pheng-Ann Heng, Junqiao Zhao†, Lanqing Li†
+                <u>Hai Zhang</u>, Boyuan Zheng, Tianying Ji, Jinhang Liu, Anqi Guo, Junqiao Zhao†, Lanqing Li†
                 <br><i>Under Review</i><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
@@ -132,8 +132,9 @@
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                   TL;DR: We propose a novel information theoretic framework of the context-based offline meta-RL paradigm, 
                   which unifies the mainstream COMRL methods, then leads to a general and state-of-the-art algorithm called UNICORN,
-                  exhibiting remarkable generalization across a broad spectrum of RL benchmarks, context shift scenarios, data qualities and deep learning architectures. </font><br>
-                <a target="_blank" href="https://arxiv.org/abs/2402.02429">arXiv</a>
+                  exhibiting remarkable generalization across a broad spectrum of RL benchmarks, context shift scenarios, data qualities and deep learning architectures. </font>
+                  <!-- <br> <a target="_blank" href="https://openreview.net/pdf?id=QFUsZvw9mx">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/UNICORN">Code</a>&nbsp;&nbsp;&nbsp;&bull;&nbsp;  -->
+                  <br> <a target="_blank" href="https://openreview.net/pdf?id=QFUsZvw9mx">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/UNICORN">Code</a>
             </p>
           </div>
         </div>
@@ -149,7 +150,7 @@
                 TL;DR: We propose SMG, which utilizes a reconstruction-based auxiliary task to extract task-relevant representations from visual observations 
                 and further strengths the generalization ability of RL agents with the help of two consistency losses.
               </font>
-              <br><a target="_blank" href="">arXiv</a> 
+              <br> <a target="_blank" href="https://openreview.net/pdf?id=wz2KvvEk44">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://anonymous.4open.science/r/SMG/">Code</a>
             </p>
           </div>
         </div>
@@ -166,8 +167,8 @@
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We theoretically derive an optimization objective that can unify model shift and model bias and then formulate a fine-tuning process, 
                   adaptively adjusting model updates to get a performance improvement guarantee while avoiding model overfitting.
-                  <br> <a target="_blank" href="https://openreview.net/pdf?id=d7a5TpePV7">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/Unified-Model-Shift-and-Model-Bias-Policy-Optimization">Code</a>&nbsp;&nbsp;&nbsp;&bull;&nbsp; 
-                  <button class="wechatButton">
+                  <br> <a target="_blank" href="https://openreview.net/pdf?id=d7a5TpePV7">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/Unified-Model-Shift-and-Model-Bias-Policy-Optimization">Code</a>
+                  <!-- <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
                   <div class="wechatModal">
                     <div class="modal-content">
@@ -176,7 +177,7 @@
                         <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                     </div>
                   </div>
-                  </button>
+                  </button> -->
             </p>
           </div>
         </div>
@@ -192,8 +193,8 @@
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We propose a method to construct a boundary that discriminates between safe and unsafe states. 
                   The boundary we construct is equivalent to distinguishing dead-end states, indicating the maximum extent to which safe exploration is guaranteed, and thus has a minimum limitation on exploration.
-                  <br> <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10319093">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/tiev-tongji/dea-rrl">Code</a>&nbsp;&nbsp;&nbsp;&bull;&nbsp; 
-                  <button class="wechatButton">
+                  <br> <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10319093">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/tiev-tongji/dea-rrl">Code</a>
+                  <!-- <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
                   <div class="wechatModal">
                     <div class="modal-content">
@@ -203,7 +204,7 @@
                         </span>
                     </div>
                   </div>
-                  </button>
+                  </button> -->
             </p>
           </div>
         </div>
