--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">the University of HongKong</a>, supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a>.
-            Now, I'm a third-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
+            <!-- I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">the University of HongKong</a>, supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a>. -->
+            I'm a third-year graduate student at <a target="_blank" href="https://github.com/tiev-tongji">TIEV</a> lab, Tongji University, supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>. 
             Before this, I got my bachelor degree at <a target="_blank" href="https://see.tongji.edu.cn/">Tongji University</a>, major in computer science and technology 
             and had an exciting experience in <a target="_blank" href="https://www.nio.cn/">NIO</a> served for backend-development engineer.
             <br>
