--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p>
                 Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng
                 <br><i>NeurIPS 2024</i><br>
-                <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8) &#9733;</i></font><br>
+                <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8; top 0.76%) &#9733;</i></font><br>
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                   TL;DR: We propose a novel information theoretic framework of the context-based offline meta-RL paradigm, 
                   which unifies the mainstream COMRL methods, then leads to a general and state-of-the-art algorithm called UNICORN,
