--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         </div>
 
         <div class="list-item publication" data-category="publication">
-          <a target="_blank" href="https://arxiv.org/abs/2402.02429" class="thumbnail"><img src="images/unicorn.png" alt="" /></a>
+          <a target="_blank" href="https://openreview.net/pdf/69a1646a2cef2d80446dd0c6c12d542d85eb5a31.pdf" class="thumbnail"><img src="images/unicorn.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="https://arxiv.org/abs/2402.02429">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
+            <h3><a target="_blank" href="https://openreview.net/pdf/69a1646a2cef2d80446dd0c6c12d542d85eb5a31.pdf">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
             <p>
                 Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng
                 <br><i>NeurIPS 2024</i><br>
-                <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8; top 0.76%) &#9733;</i></font><br>
+                <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8; top 1%) &#9733;</i></font><br>
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                   TL;DR: We propose a novel information theoretic framework of the context-based offline meta-RL paradigm, 
                   which unifies the mainstream COMRL methods, then leads to a general and state-of-the-art algorithm called UNICORN,
@@ -190,6 +190,7 @@
                     </div>
                   </div>
                   </button>
+                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;<a target="_blank" href="https://mp.weixin.qq.com/s/q7ecEiv5cPEwWyAvwfo_ig">Overview</a>
             </p>
           </div>
         </div>
@@ -197,9 +198,9 @@
         <div class="list-item publication" data-category="publication">
           <a target="_blank" href="" class="thumbnail"><img src="images/SMG.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="">Focus On What Matters: Separated Models For Visual-Based RL Generalization</a></h3>
+            <h3><a target="_blank" href="https://openreview.net/pdf?id=wz2KvvEk44">Focus On What Matters: Separated Models For Visual-Based RL Generalization</a></h3>
             <p>
-              Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Hongtu Zhou, Chang Huang, Hang Yu, Chen Ye, Junqiao Zhao, Changjun Jiang<br>
+              Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Junqiao Zhao†, Hang Yu, Chang Huang, Hongtu Zhou, Chen Ye, Changjun Jiang<br>
               <i>NeurIPS 2024</i><br>
               <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                 TL;DR: We propose SMG, which utilizes a reconstruction-based auxiliary task to extract task-relevant representations from visual observations 
