--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
             <h3><a target="_blank" href="https://arxiv.org/abs/2405.12001">Scrutinize What We Ignore: Reining In Task Representation Shift Of Context-Based Offline Meta Reinforcement Learning</a></h3>
             <p>
                 <u>Hai Zhang</u>, Boyuan Zheng, Tianying Ji, Jinhang Liu, Anqi Guo, Junqiao Zhao†, Lanqing Li†
-                <br><i>Under Review</i><br>
+                <br><i>ICLR 2025</i><br>
+                <font color="49bf9"><i>&#9733;  (Score: 6 6 8 8; top 5%) &#9733;</i></font><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We unify the training scheme commonly used in COMRL with the general RL objective, filling the gap between intuition and theoretical justification. 
                   We identify the new issue called task representation shift and theoretically demonstrate that by reining in the previously ignored task representation shift, it is possible to achieve monotonic performance improvements.
-                  <br> <a target="_blank" href="https://arxiv.org/abs/2405.12001">arXiv</a> 
+                  <br> <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICLR.cc%2F2025%2FConference%2FAuthors%23your-submissions)">Paper</a> 
             </p>
           </div>
         </div>
